tests/bad_programs/type_errors/funcall_incorrect_type2.nc
void fun(double a, int b) {
}

int main() {
    fun(1.0, false);
    return 0;
}
